<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">


    <TextView
        android:id="@+id/txtPesoAtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/peso"/>

    <EditText
        android:id="@+id/txtPesoAt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/inserire_peso"
        android:inputType="numberDecimal"
        android:paddingBottom="15dp"/>

    <TextView
        android:id="@+id/txtLivelloTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/livello"/>

    <EditText
        android:id="@+id/txtLiv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/inserire_livello_desiderato"
        android:inputType="numberDecimal"
        android:paddingBottom="15dp"/>

    <TextView
        android:id="@+id/txtAttivitaTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attivita"/>

    <EditText
        android:id="@+id/txtAttivita"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/inserire_attivita_dosata"
        android:inputType="numberDecimal"
        android:paddingBottom="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtResultAt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:gravity="center"
            android:text="..."
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@android:color/transparent"
            android:text="@string/calcola"/>
    </LinearLayout>


</LinearLayout>